Mejorada algunas relaciones de tablas
